--- a/requirements.txt
+++ b/requirements.txt
@@ -3,14 +3,18 @@ Click==7.0
 dominate==2.3.5
 Flask==1.0.3
 Flask-Bootstrap==3.3.7.1
+Flask-Less==0.6
+Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lesscpy==0.13.0
 Mako==1.0.13
 MarkupSafe==1.1.1
+ply==3.11
 psycopg2==2.8.3
 python-dateutil==2.8.0
 python-dotenv==0.10.3
