--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.0.11
 Click==7.0
 dominate==2.3.5
+elasticsearch==7.0.2
 Flask==1.0.3
 Flask-Bootstrap==3.3.7.1
 Flask-Less==0.6
@@ -21,6 +22,7 @@ python-dotenv==0.10.3
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.5
+urllib3==1.25.3
 visitor==0.1.3
 Werkzeug==0.15.4
 WTForms==2.2.1
