--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 alembic==1.0.11
+autopep8==1.4.4
+certifi==2019.6.16
+chardet==3.0.4
 Click==7.0
 dominate==2.3.5
 elasticsearch==7.0.2
@@ -10,16 +13,22 @@ Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
+idna==2.8
 itsdangerous==1.1.0
 Jinja2==2.10.1
 lesscpy==0.13.0
 Mako==1.0.13
 MarkupSafe==1.1.1
+PIL==1.1.7
+Pillow==6.1.0
+pillowcase==2.0.0
 ply==3.11
 psycopg2==2.8.3
+pycodestyle==2.5.0
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
+requests==2.22.0
 six==1.12.0
 SQLAlchemy==1.3.5
 urllib3==1.25.3
